<resources>
    <string name="app_name">影流</string>
    <bool name="isW720">false</bool>
    <string name="insert_media_source">导入源</string>
    <string name="setting">设置</string>

    <string name="source_name">源的名称(6个字以内)</string>
    <string name="source_url">源的远程地址</string>

    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="state_buffering">正在缓冲</string>
    <string name="is_support_video">视频</string>
    <string name="is_support_audio">音频</string>

    <string name="not_support_video_warn">非视频不支持跳转</string>
    <string name="error_code_io_network_connection_failed">网络连接错误,请检查设备网络</string>
    <string name="error_code_io_network_connection_timeout">网络连接超时，请稍后重试</string>

    <string name="media_source_title">一天</string>
    <string name="media_source_summary">多久更新一次源</string>

    <string name="source_select_key">source_select_key</string>
    <string name="source_select_title">当前选中的源</string>
    <string name="source_select_summary"> ，app进入时，默认加载的此源</string>

    <string name="source_refresh_key">source_refresh_key</string>
    <string name="source_refresh_title">更新选中的源</string>
    <string name="source_refresh_summary">如果选中的源有频道无法播放，可以点击我，立即更新选中的源数据</string>

    <string name="source_add_key">source_add_key</string>
    <string name="source_add_title">添加源</string>
    <string name="source_add_summary">可以添加新的源</string>

    <string name="source_delete_key">source_delete_key</string>
    <string name="source_delete_title">删除源</string>
    <string name="source_delete_summary">可以对源进行删除操作</string>


    <string name="source_update_time_key">source_update_time</string>
    <string-array name="entries_source_update_time_array">
        <item>一天</item>
        <item>两天</item>
        <item>三天</item>
        <item>七天</item>
        <item>一个月</item>
    </string-array>
    <string-array name="entry_source_update_time_values_array">
        <item>86400000</item>
        <item>172800000</item>
        <item>259200000</item>
        <item>604800000</item>
        <item>2592000000</item>
    </string-array>

    <string name="del_success">删除成功</string>

    <string name="refresh_no_select_source_tip">当前没有可用的源</string>
    <string name="update_success">更新成功</string>

    <string name="loading">加载中</string>
    <string name="updating">加更新中</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

</resources>