<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:allowDividerAbove="true"
        app:entries="@array/entries_source_update_time_array"
        app:entryValues="@array/entry_source_update_time_values_array"
        app:key="@string/source_update_time_key"
        app:summary="@string/media_source_title"
        app:title="@string/media_source_summary" />

    <Preference
        app:key="@string/source_add_key"
        app:summary="@string/source_add_summary"
        app:title="@string/source_add_title" />

    <Preference
        app:key="@string/source_delete_key"
        app:summary="@string/source_delete_summary"
        app:title="@string/source_delete_title" />

    <Preference
        app:key="feedback"
        app:summary="有啥意见赶紧反馈吧"
        app:title="意见反馈" />

</PreferenceScreen>